force-app/main/default/objects/W_9__c/W_9__c.object-meta.xml
<CustomObject>
    <label>W-9</label>
    <nameField>
        <displayFormat>W9-{0000000}</displayFormat>
        <label>W-9</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>W-9</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>