force-app/main/default/objects/W_9__c/fields/Office_ID__c.field-meta.xml
<CustomField>
    <fullName>Office_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Office ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>W-9</relationshipLabel>
    <relationshipName>W_9</relationshipName>
    <type>Lookup</type>
</CustomField>