force-app/main/default/objects/W_9__c/fields/Submitted_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>W-9</relationshipLabel>
    <relationshipName>W_9</relationshipName>
    <type>Lookup</type>
</CustomField>