force-app/main/default/objects/W_9__c/fields/TIN_Number__c.field-meta.xml
<CustomField>
    <fullName>TIN_Number__c</fullName>
    <label>TIN Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>