force-app/main/default/objects/W_9__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TIN_Number__c</columns>
    <columns>Office_ID__c</columns>
    <columns>Submitted_By__c</columns>
    <columns>Submitted_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>